[package]
name = "ah_engine"
version = "0.1.0"
edition = "2021"

[workspace]

members = [ "crates/ah_window", "crates/ah_loader",
    "crates/ah_render", "crates/ah_app",
]

[dependencies]
winit = { version = "0.30.5", features = ["rwh_05"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "23.0.0"
pollster = "0.4.0"
image = { version = "0.25.5",default-features = false,features = ["png","jpeg"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
rand = "0.8.5"
nalgebra= "0.33.2"
bevy_ecs = "0.15.0-rc.3"
bevy_input = "0.15.0-rc.3"
bevy_time = "0.15.0-rc.3"
bevy_ecs_macros = "0.15.0-rc.3"
ulid = "1.1.3"
ah_app={path = "crates/ah_app"}
