[package]
name = "k_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/app",
    "crates/renderer"
]
resolver = "2"  # Use Cargo's resolver version 2 (recommended for Rust 2021+)



[dependencies]
app = { path = "crates/app" }
renderer = { path = "crates/renderer" }
winit = { version = "0.30.9", features = ["rwh_05"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "24.0.1"
pollster = "0.4.0"
image = { version = "0.25.5",default-features = false,features = ["png","jpeg"] }
bytemuck = { version = "1.21.0", features = [ "derive" ] }
rand = "0.9.0"
bevy_ecs = "0.15.2"
bevy_ecs_macros = "0.15.2"
tobj  = "4.0.3"
gltf = "1.4.1"
glam = "0.29.2"

egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"