[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "24.0.1"
pollster = "0.4.0"
image = { version = "0.25.5",default-features = false,features = ["png","jpeg"] }
bytemuck = { version = "1.21.0", features = [ "derive" ] }
rand = "0.9.0"
bevy_ecs = "0.15.2"
bevy_ecs_macros = "0.15.2"
tobj  = "4.0.3"
gltf = "1.4.1"
glam = "0.29.2"
egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"